package SmartHomeDDD.ddd;

public interface ValueObject {
    //T getObjectValue();

}
